// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Snapshots tests should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row justify-start align-stretch sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0"
      >
        <div
          class="column sm-6 md-6 lg-6 xl-6"
        >
          Hello
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row justify-start align-stretch sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0"
    >
      <div
        class="column sm-6 md-6 lg-6 xl-6"
      >
        Hello
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Grid Snapshots tests should render row with centered elements 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row justify-center align-stretch sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0"
      >
        <div
          class="column sm-3 md-3 lg-3 xl-3"
        >
          Hello
        </div>
        <div
          class="column sm-3 md-3 lg-3 xl-3"
        >
          World!
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row justify-center align-stretch sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0"
    >
      <div
        class="column sm-3 md-3 lg-3 xl-3"
      >
        Hello
      </div>
      <div
        class="column sm-3 md-3 lg-3 xl-3"
      >
        World!
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Grid Snapshots tests should render row with centered elements 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row justify-center align-stretch sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0"
      >
        <div
          class="column sm-3 md-3 lg-3 xl-3"
        >
          Hello
        </div>
        <div
          class="column sm-3 md-3 lg-3 xl-3"
        >
          World!
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row justify-center align-stretch sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0"
    >
      <div
        class="column sm-3 md-3 lg-3 xl-3"
      >
        Hello
      </div>
      <div
        class="column sm-3 md-3 lg-3 xl-3"
      >
        World!
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Grid Snapshots tests should render row with column gap 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row justify-start align-stretch sm-column-gap-8 md-column-gap-8 lg-column-gap-8 xl-column-gap-8 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0"
      >
        <div
          class="column sm-12 md-12 lg-12 xl-12"
        >
          Hello
        </div>
        <div
          class="column sm-12 md-12 lg-12 xl-12"
        >
          World!
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row justify-start align-stretch sm-column-gap-8 md-column-gap-8 lg-column-gap-8 xl-column-gap-8 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0"
    >
      <div
        class="column sm-12 md-12 lg-12 xl-12"
      >
        Hello
      </div>
      <div
        class="column sm-12 md-12 lg-12 xl-12"
      >
        World!
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Grid Snapshots tests should render row with reversed elements 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row justify-start align-stretch sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0 reverse"
      >
        <div
          class="column sm-3 md-3 lg-3 xl-3"
        >
          Hello
        </div>
        <div
          class="column sm-3 md-3 lg-3 xl-3"
        >
          World!
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row justify-start align-stretch sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0 reverse"
    >
      <div
        class="column sm-3 md-3 lg-3 xl-3"
      >
        Hello
      </div>
      <div
        class="column sm-3 md-3 lg-3 xl-3"
      >
        World!
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Grid Snapshots tests should render row with row gap 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row justify-start align-stretch sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-8 md-row-gap-8 lg-row-gap-8 xl-row-gap-8"
      >
        <div
          class="column sm-12 md-12 lg-12 xl-12"
        >
          Hello
        </div>
        <div
          class="column sm-12 md-12 lg-12 xl-12"
        >
          World!
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row justify-start align-stretch sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-8 md-row-gap-8 lg-row-gap-8 xl-row-gap-8"
    >
      <div
        class="column sm-12 md-12 lg-12 xl-12"
      >
        Hello
      </div>
      <div
        class="column sm-12 md-12 lg-12 xl-12"
      >
        World!
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Grid Snapshots tests should render row with vertically centered elements 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row justify-start align-center sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0"
      >
        <div
          class="column sm-3 md-3 lg-3 xl-3"
        >
          Hello
        </div>
        <div
          class="column sm-3 md-3 lg-3 xl-3"
        >
          World!
          <div>
            Extra text
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row justify-start align-center sm-column-gap-0 md-column-gap-0 lg-column-gap-0 xl-column-gap-0 sm-row-gap-0 md-row-gap-0 lg-row-gap-0 xl-row-gap-0"
    >
      <div
        class="column sm-3 md-3 lg-3 xl-3"
      >
        Hello
      </div>
      <div
        class="column sm-3 md-3 lg-3 xl-3"
      >
        World!
        <div>
          Extra text
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
